--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,7 +13,7 @@ nav {
 
     a{
         font-size: 1.6rem;
-        margin: 2rem;
+        margin: 2rem;  
     }
 
     // media queries
@@ -23,4 +23,11 @@ nav {
             margin: 1rem;
         }
     }
+
+    // make it fixed
+    overflow: hidden;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */    
+    opacity: 0.9;
 }
